framec_tests/language_specific/java/v3_outline/negative/handler_in_nonstate_block.frm
@target java

system S {
    machine:
        {
            e() {
                => $^
            }
        }
}

